curiositymachine/static/less/pages/base.less
/* ... */
.challenge-browser {
  margin-top: 40px;
}


////============================
///    challenge details

.challenge-details-hero {
  position: relative;
  margin: 0 -(@grid-side-gutters);
  min-height: 50px;
  img {
    width: 100%;
  }
  .details {
    color: #fff;
    position: relative;
    bottom: 0px;
    left: 67px;
    font-size: 36px;
    margin-right: 200px;
    margin-top: 0px;
  }
}

.challenge-details {
  .btn-primary {
    position: relative;
    float: right;
    margin: -70px 0px 0 0;
    z-index: 2;
  }
  .challenge-content {
    margin-top: 100px;
  }
}

#guide-modal {
  .tab-pane {
    height: 340px;
    overflow: scroll;
  }
}

.main-content {
  padding-top: 40px;
  padding-bottom: 100px;

  & > h1 {
    margin: -10px 200px 30px 0px;
  }
  & > h1.full-width {
    margin: -10px 0px 30px 0px;
  }
}

.footer-content {
  text-align: center;
  background-color: #333;
  color: white;
  padding-left: 0;
  padding-right: 0;
  margin-bottom: 10px;

  p {
    margin: 0;
  }

  .nsf-logo {
    width: 70px;
  }
}

//============================
//    Challenges page

.challenge-header {
  padding: 10px 0 40px 0;
 p {
  font-size: @font-size-large;
  color: @orange;
  }
}



.action-list {
  padding: 0;
  clear: both;
  li {
    float: left;
    width: 33%;
    padding: 0 5px;
    list-style-type: none;
    text-align: center;
    .btn {
      background: @green;
      color: #fff;
      font-size: 30px;
      width: 75px;
      height: 75px;
      line-height: 1;
      padding: 15px;
      .gray-light & {
        background: @gray-light;
      }
    }
  }
}

.action-list-tsl {
  padding: 0;
  clear: both;
  margin-left: 100px;
  li {
    float: left;
    width: 33%;
    padding: 0 5px;
    list-style-type: none;
    text-align: center;
    .btn {
      background: @green;
      color: #fff;
      font-size: 30px;
      width: 75px;
      height: 75px;
      line-height: 1;
      padding: 15px;
      .gray-light & {
        background: @gray-light;
      }
    }
  }
}




.challenge-content {
  margin-top: 120px;
  .start-link {
    width: 100%;
    padding: 20px 0;
    font-size: @font-size-large;
    font-weight: 600;
  }
}

.materials-list {
  .panel-heading {
    background: @blue;
    color: #fff;
  }
  ul, ol {
    padding-left: 19px;
  }
  margin-bottom: 35px;
}

.mentor-comment {
  float: left;
  color: @blue;
  font-weight: 600;
}

.panel-bubble.comment {
  margin-top: 5px;
  margin-right:125px;
  .panel-body {
    padding: 15px;
  }
}

.mentor-info.comment {
  float: right;
  width: 100px;
  img {
    width: 50px;
  }
}

.starter-info {
margin-left: auto;
    margin-right: auto;
    table-layout: fixed;
    border-collapse: collapse;
  float: left;
  width: 45px;
  z-index: 1;
  position:relative;
  img {
    width: 34px;
  }
}

//reflect
.reflect-box {
  textarea {
    display: block;
    background: lighten(@teal, 40%);
    width: 100%;
    color: @text-color;
    resize: vertical;
  }
  .action-list li .btn {
    .button-variant(#fff; @teal; @teal);
    margin-right: 10px;
  }
  .btn-link {
    color: #fff;
  }
  label {display: none;}
  p {
    margin: 20px 0;
  }
  a { color: #fff;}
}

.reflect-question {
  .panel-bubble & h3 {
    text-align: left;
    margin-bottom: 0;
    font-weight: 600;
  }
  .refresh {
    margin-top: 5px;
   cursor: pointer;
   padding-right: 10px;
   position: relative;
   top: 3px;
   font-size: @font-size-small;
  }
}

.congratulations-panel {
  min-height: 350px;
  padding-top: 60px;
  background:
    url(../images/examples/balloon-left-animated.gif) top left no-repeat,
    url(../images/examples/balloon-right-animated.gif) top right no-repeat;
}

.modal-dialog .reflect-question {
  color: lighten(@teal, 5%);
  font-weight: 600;
}

#reflect-images {
  img {
    width: 100%;
  }
  .img-wrapper {
    margin-bottom: 15px;
  }
  .btn-primary {
    font-size: 40px;
  }
  .btn-link {
    font-size: 18px;
  }
}

#reflect-images-modal {
  #reflect-images-selector {
    margin: 0;
    padding: 0;
    li {
      float: left;
      list-style-type: none;
      width: 50%;
      padding: 20px;
      cursor: pointer;
      transition: background .25s;
      border-radius: 10px;
      &.selected, &:hover {
        background: @blue;
      }
      &:nth-child(2n-1) {
        clear: both;
      }
    }
    img {
      width: 100%;
    }
  }
}


//// mentor view
.mentor-panel-content {
  .panel {
    margin-top: 20px;

    textarea {
      width: 100%;
      resize: vertical;
      color: black;
    }
  }
}


////profiles

.mentor-info {
  .image-wrapper {
    img {
      width: 100%;
    }
  }

  img {
    margin-bottom: 20px;
  }
}

.profile-fields {

  input[type="text"], input[type="password"], input[type="email"] {
    width: 100%;
  }

  label {
    margin-top: 10px;
  }

  textarea {
    width: 100%;
    height: 8em;
    resize: vertical;
  }

  img, .videocontent {
    width: 100%;
    height: auto;
    margin-bottom: 10px;
  }
}

.captcha {
  margin: 20px 10px 0 0;
}

//student home

#challenges {
  .pipe-nav {
    padding: 0;
    position: relative;
    top: 15px;
  }
}

.user-avatar {
  position: absolute;
  right: @grid-side-gutters;
  top: 20px;
}

//////  mentor-training

#mentor-training {
  .panel-comment {
    position: relative;
  }
  .replies {
    //margin-left: 50px;
    background:@bg-color-dark;
    padding: 25px 25px 25px 50px;
    margin-top: -20px;
    .border-bottom-radius(@border-radius-large);
  }
  section {
    margin-bottom: 40px;
  }
  form textarea {
    width: 100%;
    height: 170px;
  }
  .mentor-training-comment {
   // margin-right: 125px;
    margin-bottom: 25px;
  }
  .btn-approve {
    display: block;
    text-align: center;
    width: 100%;
  }
}

//// mentors list
.join-date {
  float: right;
  font-size: @font-size-small;
  padding-top: 3px;
}
/* ... */

